--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-     <!-- ex <div id="A2"></div> -->
+     <!--ex--> <div id="A2"></div>
     <script src="script.js"></script>
   </body>
 </html>
