adding piano ui

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-     <!--ex--> <div id="A2"></div>
+    <h1>Click on a key for now to play piano</h1>
+     <!--this person posted something online that helped me order the notes:
+    https://stackoverflow.com/questions/29656280/how-to-create-a-completely-flexible-piano-keyboard-with-html-and-css-->
+      <div id="keys">
+        <div id="a" class="note white">A</div>
+        <div id="w" class="note black">W</div>
+        <div id="s" class="note white">S</div>
+        <div id="e" class="note black">E</div>
+        <div id="d" class="note white">D</div>
+        <div id="f" class="note white">F</div>
+        <div id="t" class="note black">T</div>
+        <div id="g" class="note white">G</div>
+        <div id="y" class="note black">Y</div>
+        <div id="h" class="note white">H</div>
+        <div id="u" class="note black">U</div>
+        <div id="j" class="note white">J</div>
+        <div id="k" class="note white">K</div>
+        <div id="o" class="note black">O</div>
+        <div id="l" class="note white">L</div>
+        <div id="p" class="note black">P</div>
+        <div id="semiColon" class="note white">;</div>
+      </div>
+
     <script src="script.js"></script>
   </body>
 </html>
