functionality with keys stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Click on a key for now to play piano</h1>
+    <h1>no touch rn</h1>
      <!--this person posted something online that helped me order the notes:
     https://stackoverflow.com/questions/29656280/how-to-create-a-completely-flexible-piano-keyboard-with-html-and-css-->
       <div id="keys">
@@ -29,6 +29,7 @@
         <div id="p" class="note black">P</div>
         <div id="semiColon" class="note white">;</div>
       </div>
+      <p id="demo"></p>
 
     <script src="script.js"></script>
   </body>
