--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>no touch rn</h1>
+    <p id="demo"></p>
      <!--this person posted something online that helped me order the notes:
     https://stackoverflow.com/questions/29656280/how-to-create-a-completely-flexible-piano-keyboard-with-html-and-css-->
       <div id="keys">
@@ -29,8 +30,11 @@
         <div id="p" class="note black">P</div>
         <div id="semiColon" class="note white">;</div>
       </div>
-      <p id="demo"></p>
-
+      <!--audio stuff, get the audio later
+      <audio controls>
+        <source src=""
+      </audio>
+    -->
     <script src="script.js"></script>
   </body>
 </html>
