--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>no touch rn</h1>
+    <h1>ok, only touch a little</h1>
     <p id="demo"></p>
      <!--this person posted something online that helped me order the notes:
     https://stackoverflow.com/questions/29656280/how-to-create-a-completely-flexible-piano-keyboard-with-html-and-css-->
