Styling and instructions

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>ok, only touch a little</h1>
+    <h1>Javascript Piano!</h1>
+    <h2>Touch any key listed on the piano to play a note</h2>
     <p id="pianoNote"></p>
      <!--this person posted something online that helped me order the notes:
     https://stackoverflow.com/questions/29656280/how-to-create-a-completely-flexible-piano-keyboard-with-html-and-css-->
