--- a/index.html
+++ b/index.html
@@ -10,28 +10,26 @@
     <h1>Javascript Piano!</h1>
     <h2>Touch any key listed on the piano to play a note</h2>
     <p id="pianoNote"></p>
-     <!--this person posted something online that helped me order the notes:
-    https://stackoverflow.com/questions/29656280/how-to-create-a-completely-flexible-piano-keyboard-with-html-and-css-->
-      <div id="keys">
-        <div id="a" class="note white">A</div>
-        <div id="w" class="note black">W</div>
-        <div id="s" class="note white">S</div>
-        <div id="e" class="note black">E</div>
-        <div id="d" class="note white">D</div>
-        <div id="f" class="note white">F</div>
-        <div id="t" class="note black">T</div>
-        <div id="g" class="note white">G</div>
-        <div id="y" class="note black">Y</div>
-        <div id="h" class="note white">H</div>
-        <div id="u" class="note black">U</div>
-        <div id="j" class="note white">J</div>
-        <div id="k" class="note white">K</div>
-        <div id="o" class="note black">O</div>
-        <div id="l" class="note white">L</div>
-        <div id="p" class="note black">P</div>
-        <div id="semiColon" class="note white">;</div>
-      </div>
-
+     <!-- Piano list credit: https://codepen.io/zastrow/pen/oDBki -->
+     <ul class="set">
+      <li id="a" class="white c">A</li>
+      <li id="w"class="black cs">W</li>
+      <li id="s" class="white d">S</li>
+      <li id="e" class="black ds">E</li>
+      <li id="d" class="white e">D</li>
+      <li id="f" class="white f">F</li>
+      <li id="t" class="black fs">T</li>
+      <li id="g" class="white g">G</li>
+      <li id="y" class="black gs">Y</li>
+      <li id="h" class="white a">H</li>
+      <li id="u" class="black as">U</li>
+      <li id="j" class="white b">J</li>
+      <li id="k" class="white c">K</li>
+      <li id="o" class="black cs">O</li>
+      <li id="l" class="white d">L</li>
+      <li id="p" class="black ds">P</li>
+      <li id="semiColon" class="white e">;</li>
+    </ul>
     <script src="script.js"></script>
   </body>
 </html>
