--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Javascript Piano!</h1>
-    <h2>Touch any key listed on the piano to play a note</h2>
+    <h2>Press any key listed on the piano to play a note</h2>
     <p id="pianoNote"></p>
      <!-- Piano list credit: https://codepen.io/zastrow/pen/oDBki -->
      <ul class="set">
