--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <p id="pianoNote"></p>
      <!-- Piano list credit: https://codepen.io/zastrow/pen/oDBki -->
      <ul class="set">
-      <li id="a" class="white c">A</li>
-      <li id="w"class="black cs">W</li>
-      <li id="s" class="white d">S</li>
-      <li id="e" class="black ds">E</li>
-      <li id="d" class="white e">D</li>
-      <li id="f" class="white f">F</li>
-      <li id="t" class="black fs">T</li>
-      <li id="g" class="white g">G</li>
-      <li id="y" class="black gs">Y</li>
-      <li id="h" class="white a">H</li>
-      <li id="u" class="black as">U</li>
-      <li id="j" class="white b">J</li>
-      <li id="k" class="white c">K</li>
-      <li id="o" class="black cs">O</li>
-      <li id="l" class="white d">L</li>
-      <li id="p" class="black ds">P</li>
-      <li id="semiColon" class="white e">;</li>
+      <li id="a" class="c">A</li>
+      <li id="w"class="cs">W</li>
+      <li id="s" class="d">S</li>
+      <li id="e" class="ds">E</li>
+      <li id="d" class="e">D</li>
+      <li id="f" class="f">F</li>
+      <li id="t" class="fs">T</li>
+      <li id="g" class="g">G</li>
+      <li id="y" class="gs">Y</li>
+      <li id="h" class="a">H</li>
+      <li id="u" class="as">U</li>
+      <li id="j" class="b">J</li>
+      <li id="k" class="c">K</li>
+      <li id="o" class="cs">O</li>
+      <li id="l" class="d">L</li>
+      <li id="p" class="ds">P</li>
+      <li id="semiColon" class="e">;</li>
     </ul>
     <script src="script.js"></script>
   </body>
